build: :heavy_plus_sign: nextjs boilerplate setup

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,4 +22,7 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "prettier.ignorePath": ".gitignore" // Don't run prettier for files listed in .gitignore
+  ,
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "typescript.enablePromptUseWorkspaceTsdk": true
 }
