--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "next-seo": "^5.15.0",
     "next-sitemap": "^3.1.43",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.3.0",
