--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "next-sitemap": "^3.1.43",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "zustand": "^4.1.5"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.3.0",
