--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "postbuild": "next-sitemap"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.4.5",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "framer-motion": "^8.0.2",
     "next": "^13.1.0",
     "next-seo": "^5.15.0",
     "next-sitemap": "^3.1.43",
