--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "next-sitemap": "^3.1.43",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.41.1",
     "react-icons": "^4.7.1",
+    "zod": "^3.20.2",
     "zustand": "^4.1.5"
   },
   "devDependencies": {
