--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@chakra-ui/react": "^2.4.5",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@hookform/resolvers": "^2.9.10",
     "framer-motion": "^8.0.2",
     "next": "^13.1.0",
     "next-seo": "^5.15.0",
