--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "next-js-boilerplate",
   "version": "3.6.0",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3001",
     "build-stats": "cross-env ANALYZE=true npm run build",
     "export": "next export",
     "build-prod": "run-s clean build export",
@@ -34,6 +34,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.1",
     "react-icons": "^4.7.1",
+    "swr": "^2.0.0",
     "zod": "^3.20.2",
     "zustand": "^4.1.5"
   },
