--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-hook-form": "^7.41.1",
     "react-icons": "^4.7.1",
     "swr": "^2.0.0",
+    "uuid": "^9.0.0",
     "zod": "^3.20.2",
     "zustand": "^4.1.5"
   },
@@ -53,6 +54,7 @@
     "@types/jest": "^29.2.4",
     "@types/node": "^18.11.17",
     "@types/react": "^18.0.26",
+    "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
     "autoprefixer": "^10.4.13",
